...
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/KontaktEigenschaftenPrioritaet" />

            <ImageView
                android:id="@+id/BildPrioritaet1"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/BildPrioritaet1"
                android:focusable="auto"
...
                android:contentDescription="@string/BildPrioritaet2"
                android:focusable="auto"
                android:onClick="ChangeContact"
                app:srcCompat="@drawable/prioritaet2" />

            <ImageView
                android:id="@+id/BildPrioritaet3"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/BildPrioritaet3"
                android:focusable="auto"
...
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/KontaktEigenschaftenBeschreibung" />

            <EditText
                android:id="@+id/beschreibungseditor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Kontaktname"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />
...
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/KontaktEigenschaftenNummer" />

            <EditText
                android:id="@+id/telefoneditor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Kontaktnummer"
                android:inputType="phone"
                android:importantForAutofill="no" />
...
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/ButtonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onWritePersistent"
                android:text="@android:string/ok"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
...
