<resources>
    <string name="app_name">SafeLifeMonitor</string>
    <string name="Einstellungen_Applikation">Einstellungen</string>
    <string name="Einstellungen_Kontakt">Kontakt-Einstellungen</string>
    <string name="KontaktEigenschaftenNummer">Nummer:</string>
    <string name="KontaktEigenschaftenBeschreibung">Anzeige:</string>
    <string name="KontaktEigenschaftenPrioritaet">Priorität:</string>
    <string name="ApplikationsEigenschaftenAktiviereUeberwachung">Monitoring aktiv:</string>
    <string name="ApplikationsEigenschaftenVonZeit">Von:</string>
    <string name="ApplikationsEigenschaftenBisZeit">-</string>
...
